fix(compute): validate nested request object types